Fix to logo on mobile
Using a custom font for now. No longer need the SVG. (which didn’t include the paths for the font, so it was useless in its existing form)

--- a/html_sketches/home_with_menu/home_with_menu.css
+++ b/html_sketches/home_with_menu/home_with_menu.css
@@ -62,6 +62,10 @@ li {
 		z-index: 						20;
 		top:								5px;
 		left:								7px;
+    text-transform:     lowercase;
+    font-family:        DistrictBlack;
+    letter-spacing:     -2px;
+    font-size:          31px;
 		}
 
 #top-bar {
@@ -160,7 +164,7 @@ li {
 		padding:						3px 5px;
 		background: 				linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 85%, rgba(0,0,0,0.6) 100%);
 		display:	          flex;
-		align-items: flex-end;
+		align-items: 				flex-end;
     -webkit-font-smoothing: antialiased;
 		}
 
